ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: microbot
 namespace: microbot
spec:
 rules:
   - host: 54.89.169.141.xip.io
     http:
       paths:
         - path: /
           backend:
             serviceName: microbot
             servicePort: 80
